[workspace]
resolver = "2"
members = [
  "native/*",
  "util/mr_minutes"
]

default-members = ["native/acter"]

[workspace.dependencies.matrix-sdk]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/crates/matrix-sdk"
default-features = false
features = ["experimental-sliding-sync"]

[workspace.dependencies.matrix-sdk-base]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/crates/matrix-sdk-base"
default-features = false

[workspace.dependencies.matrix-sdk-sqlite]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/crates/matrix-sdk-sqlite"
default-features = false
features = ["crypto-store", "state-store"]

[workspace.dependencies.matrix-sdk-store-encryption]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/crates/matrix-sdk-store-encryption"
default-features = false

[workspace.dependencies.matrix-sdk-ui]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/crates/matrix-sdk-ui"
default-features = false
features = ["e2e-encryption"]

[workspace.dependencies.matrix-sdk-test]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
branch = "set-room-account-data"
# path = "../matrix-rust-sdk/testing/matrix-sdk-test"
default-features = false

[workspace.dependencies.ruma]
git = "https://github.com/matrix-org/ruma"
rev = "f25b3220d0c3ece7720020ed180af4955a855402"

[workspace.dependencies.ruma-client-api]
git = "https://github.com/matrix-org/ruma"
rev = "f25b3220d0c3ece7720020ed180af4955a855402"

[workspace.dependencies.ruma-common]
git = "https://github.com/matrix-org/ruma"
rev = "f25b3220d0c3ece7720020ed180af4955a855402"

[workspace.dependencies.ruma-events]
git = "https://github.com/matrix-org/ruma"
rev = "f25b3220d0c3ece7720020ed180af4955a855402"

[workspace.dependencies.ruma-macros]
git = "https://github.com/matrix-org/ruma"
rev = "f25b3220d0c3ece7720020ed180af4955a855402"

[workspace.dependencies.url]
version = "2.5.0"
features = ["serde"]

[workspace.dependencies]
strum = { version = "0.26.1", features = ["derive"] }
base64ct = "1.6.0"
derive-getters = "0.3.0"
derive_builder = "0.20.0"
icalendar = "0.16.1"
scc = "2"

[profile.release]
panic = "unwind"
opt-level = 2
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]
const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }