[workspace]
resolver = "2"
members = [
  "native/*",
  "util/mr_minutes"
]

default-members = ["native/acter"]

[workspace.dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/crates/matrix-sdk"
default-features = false
features = [
  "experimental-sliding-sync",
  "rustls-tls",
]


[workspace.dependencies.matrix-sdk-base]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/crates/matrix-sdk-base"
default-features = false
[workspace.dependencies.matrix-sdk-sqlite]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/crates/matrix-sdk-sqlite"
default-features = false
features = ["crypto-store", "state-store"]

[workspace.dependencies.matrix-sdk-store-encryption]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/crates/matrix-sdk-store-encryption"
default-features = false

[workspace.dependencies.matrix-sdk-ui]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/crates/matrix-sdk-ui"
default-features = false

[workspace.dependencies.matrix-sdk-test]
git = "https://github.com/matrix-org/matrix-rust-sdk"
# path = "../matrix-rust-sdk/testing/matrix-sdk-test"
default-features = false


# not used directly but needed to enable specific features from ruma
# ATTENTION: _MUST_ stay in sync with the ruma-rev used by matrix-sdk!
[workspace.dependencies.ruma]
# version = "0.11.1"
git = "https://github.com/ruma/ruma"
rev = "c91499fc464adc865a7c99d0ce0b35982ad96711"

# - see comment above
[workspace.dependencies.ruma-common]
# version = "0.14.1"
git = "https://github.com/ruma/ruma"
rev = "c91499fc464adc865a7c99d0ce0b35982ad96711"

[workspace.dependencies.url]
version = "2.5.0"
features = ["serde"]

[workspace.dependencies]
strum = { version = "0.26.1", features = ["derive"] }
base64ct = "1.6.0"
derive-getters = "0.5.0"
derive_builder = "0.20.0"
icalendar = "0.16.1"
scc = "2"
env_logger = "0.11.5"
urlencoding = "2.1.3"

[profile.release]
panic = "unwind"
opt-level = 2
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]
const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }
