[workspace]
resolver = "2"
members = [
  "native/*",
  "util/mr_minutes",
  "util/sari"
]

default-members = ["native/acter"]

[workspace.package]
rust-version = "1.85"

[workspace.dependencies.ffi-gen]
#path = "../ffi-gen/"
git = "https://github.com/acterglobal/ffi-gen"
branch = "ben-ffi-next"



[workspace.dependencies.uniffi-dart]
#path = "../uniffi-dart/"
git = "https://github.com/acterglobal/uniffi-dart"
branch = "ben-ffi-next"


[workspace.dependencies.uniffi]
version = "0.28.0"

[workspace.dependencies.matrix-sdk]
# path = "../matrix-rust-sdk/crates/matrix-sdk"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-base]
# path = "../matrix-rust-sdk/crates/matrix-sdk-base"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-sqlite]
# path = "../matrix-rust-sdk/crates/matrix-sdk-sqlite"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false
features = ["crypto-store", "state-store"]

[workspace.dependencies.matrix-sdk-store-encryption]
# path = "../matrix-rust-sdk/crates/matrix-sdk-store-encryption"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-ui]
# path = "../matrix-rust-sdk/crates/matrix-sdk-ui"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-ffi]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-ffi-macros]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false

[workspace.dependencies.matrix-sdk-test]
# path = "../matrix-rust-sdk/testing/matrix-sdk-test"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "8c3f55456f668ea3548658c9d9573a87f3a94cf1"
default-features = false


# not used directly but needed to enable specific features from ruma
# ATTENTION: _MUST_ stay in sync with the ruma-rev used by matrix-sdk!
[workspace.dependencies.ruma]
version = "0.12.2"
# git = "https://github.com/ruma/ruma"
# rev = "7755c7cbc580f8d8aea30d78cc1a6850b1a6fd39"
features = ['unstable-msc4095']

# - see comment above
[workspace.dependencies.ruma-common]
version = "0.15.2"
# git = "https://github.com/ruma/ruma"
# rev = "7755c7cbc580f8d8aea30d78cc1a6850b1a6fd39"

[workspace.dependencies.url]
version = "2.5.0"
features = ["serde"]

[workspace.dependencies]
strum = { version = "0.27.0", features = ["derive"] }
base64ct = "1.6.0"
derive-getters = "0.5.0"
derive_builder = "0.20.0"
icalendar = "0.16.1"
scc = "2"
env_logger = "0.11.7"
urlencoding = "2.1.3"
eyeball-im = { git = "https://github.com/jplatte/eyeball", branch = "main" }

[profile.release]
panic = "unwind"
opt-level = 2
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]
async-compat = { git = "https://github.com/element-hq/async-compat", rev = "5a27c8b290f1f1dcfc0c4ec22c464e38528aa591" }
const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }
# async-compat = { git = "https://github.com/element-hq/async-compat", rev = "5a27c8b290f1f1dcfc0c4ec22c464e38528aa591" }
