[package]
name = "acter"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "SDK of the acter app"
homepage = "https://acter.global"
repository = "https://github.com/acterglobal/a3"
license-file = "../../LICENSE.txt"

[features]
default = ["dart"]
testing = []
cbindgen = []
tracing = ["dep:tracing-subscriber", "dep:tracing-appender", "dep:tracing-log"]
tracing-console = ["tracing", "dep:console-subscriber", "tokio/tracing"]
dart = []
uniffi = ["dep:uniffi", "dep:thiserror"]
proxyman = ["dep:reqwest", "dep:openssl"]

[build-dependencies]
ffi-gen = { git = "https://github.com/acterglobal/ffi-gen", branch = "main" }
# ffi-gen = { path = "../../../ffi-gen" }
cbindgen = "0.26.0"
uniffi = { version = "0.26.1", features = [ "build" ] }

[dependencies]
anyhow = "*"
async-stream = "*"
base64ct = { version = "*", features = ["alloc"] }
chrono = "*"
derive-getters = { workspace = true }
derive_builder = { workspace = true }
eyeball-im = "*"
fern = { git = "https://github.com/acterglobal/fern", branch = "rotate", features = ["manual"] }
ffi-gen-macro = { git = "https://github.com/acterglobal/ffi-gen", branch = "main" }
# ffi-gen-macro = { path = "../../../ffi-gen/macro" }
futures = "*"
futures-signals = "0.3.33"
icalendar = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
infer = "0.15.0"
lazy_static = "*"
log = "*"
log-panics = "2.1.0"
mime = "*"
mime2ext = "*"
mime_guess = "2.0.4"
parse-env-filter = "0.1.0"

sanitize-filename-reader-friendly = "2.2.1"
scc = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { workspace = true }
tokio = {version = "1.37", features = ["rt-multi-thread"]  }
tokio-stream = "0.1.14"
tokio-retry = "0.3.0"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
url = { workspace = true }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4"] }

# for markdown support.
pulldown-cmark = { version = "0.9.3", default-features = false }

# for uniffi support
uniffi = { version = "0.26.1", features = ["cli"], optional = true }
thiserror = { version = "1.0.56", optional = true }

# for proxyman support
# enable support for system native TLS certificates
reqwest = { optional = true, version = "*", default-features = false, features = ["rustls-tls-native-roots"] }

# for tracing support
tracing-subscriber = { version = "0.3.1", optional = true, default-features = false, features = ["fmt", "std", "env-filter"] }
tracing-appender = { version = "0.2", optional = true }
tracing-log = { version = "0.2", optional = true }
console-subscriber = { version = "0.2.0", optional = true }

# not used directly but needed to enable specific features from ruma
ruma = { workspace = true, features = ["html", "rand", "unstable-msc2448", "unstable-msc2965", "unstable-msc3930", "unstable-msc3245-v1-compat"] }
ruma-common = { workspace = true, features = ["client", "unstable-unspecified"] }

[dev-dependencies]
tempfile = "3.9.0"

[dependencies.acter-core]
path = "../core"
features = ["templates", "client"]

[dependencies.matrix-sdk]
workspace = true
features = [
    "anyhow",
    "automatic-room-key-forwarding",
    "bundled-sqlite",
    "markdown",
#   "qrcode",
    "e2e-encryption",
]

[dependencies.matrix-sdk-base]
workspace = true

[dependencies.matrix-sdk-store-file-event-cache]
path = "../file-event-cache"

#   ----   WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.40"

#   ----   non-WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matrix-sdk-sqlite = { workspace = true }
matrix-sdk-ui = { workspace = true }

#   ----   ANDROID
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-android = "0.2"
openssl = { version = "*", optional = true, features = ["vendored"] }

#   ----   IOS/MACOS
[target.'cfg(target_os = "ios")'.dependencies]
oslog = { version = "0.2", features = ["logger"] }

[lib]
name = "acter"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
required-features = ["uniffi"]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
