[package]
name = "effektio-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "CLI of effektio app to interact with an effektio setup"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[dependencies]
clap = { version = "3", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = "0.9.0"
log = "0.4.14"
flexi_logger = { version = "0.22.5", features = ["use_chrono_for_offset"] }
tokio = { version = "1", features = ["full", "time"] }
futures = { version = "0.3.21" }
anyhow = "1"
mime = '0.3.16'
term-table = "1.3.2"

[dependencies.effektio-core]
path = "../core"
features = ["with-mocks"]

[dependencies.effektio]
path = "../effektio" 
default-features = false

[dependencies.matrix-sdk]
# FIXME: temp to configure feature 
git = "https://github.com/matrix-org/matrix-rust-sdk/"
default-features = false
features = ["rustls-tls"]


[dependencies.matrix-sdk-base]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
default-features = false