[package]
name = "effektio-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "CLI of effektio app to interact with an effektio setup"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = "0.9.0"
futures = { version = "0.3.21" }
env_logger = "0.10.0"
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
matrix-sdk-sled = { workspace = true }
mime = "0.3.16"
term-table = "1.3.2"
tokio = { version = "1", features = ["full", "time"] }
tracing = { version = "0.1.36", features = ["log"] }

[dependencies.effektio-core]
path = "../core"
features = ["with-mocks"]

[dependencies.effektio]
path = "../effektio"
default-features = false
features = ["testing"]