[package]
name = "acter-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "CLI of acter app to interact with an acter setup"
homepage = "https://effekto.org"
repository = "https://github.com/acterglobal/a3"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "*"
clap = { version = "4.4.8", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = "0.11.0"
futures = "*"
env_logger = { workspace = true }
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
matrix-sdk-sqlite = { workspace = true }
tokio = { version = "*", features = ["full", "time"] }
tracing = { version = "*", features = ["log"] }

[dependencies.acter-core]
path = "../core"

[dependencies.acter]
path = "../acter"
default-features = false
features = ["testing"]
