[package]
name = "acter-core"
version = "0.1.0"
edition = "2024"
authors = [ "ben@acter.global" ]
description = "Core types and eingnes of acter"
homepage = "https://acter.global"
repository = "https://github.com/acterglobal/a3"
license-file = "../../LICENSE.txt"
rust-version.workspace = true

[features]
testing = [ "tokio/full", "thiserror"]
strum = ["dep:strum"]

[dependencies]
strum = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
async-recursion = "1"
eyeball-im = { workspace = true }
futures = { version = "0.3.30" }
scc = "2.3.4"
tokio = { version = "1" }

# for testing-feature only
thiserror = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
env_logger = "0.11"
anyhow = "1"