[package]
name = "effektio-test"
description = "internal integration tests for effektio"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.effektio]
path = "../effektio"
default-features = false
features = ["with-mocks"]

[dependencies]
anyhow = "1"
async-broadcast = "0.4"
env_logger = "0.9"
futures = "0.3.17"
log = "0.4"
tempfile = "3.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
