[package]
name = "effektio-tui"
description = "The Effektio Terminal User Interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "1"
tui = "0.19.0"
crossterm = "0.25"
clap = { version = "3", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = "0.9.0"
flexi_logger = { version = "0.22.5", features = ["use_chrono_for_offset"] }
futures = { version = "0.3.21" }
log = "0.4.14"
mime = "0.3.16"
term-table = "1.3.2"
tokio = { version = "1", features = ["full", "time"] }
app_dirs2 = "2.5.3"

[dependencies.effektio-core]
path = "../core"

[dependencies.effektio]
path = "../effektio"
default-features = false
