[package]
name = "effektio-tui"
description = "The Effektio Terminal User Interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "1"
tui = "0.19.0"
tui-logger = { git = "https://github.com/gin66/tui-logger" }
crossterm = "0.25"
clap = { version = "3", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = "0.9.0"
env_logger = "0.10.0"
futures = { version = "0.3.21" }
tracing = "0.1.37"
mime = "0.3.16"
term-table = "1.3.2"
tokio = { version = "1", features = ["full", "time"] }
app_dirs2 = "2.5.3"

[dependencies.effektio-core]
path = "../core"

[dependencies.effektio]
path = "../effektio"
default-features = false
