[package]
name = "effektio"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ffi-gen = { git = "https://github.com/bmcpt/ffi-gen", rev = "bb219bd8" }

[dependencies]
anyhow = "1.0.51"
ffi-gen = { git = "https://github.com/bmcpt/ffi-gen", rev = "bb219bd8" }
ffi-gen-macro = { git = "https://github.com/bmcpt/ffi-gen", rev = "bb219bd8" }
tokio = "1"
futures = "0.3.17"
lazy_static = "1.4"
parking_lot = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
url = "2.2.2"
log-panics = "2.0.0"
log = "0.4"
tracing = { version = "0.1.29", default-features = false }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", default-features = false, features = ["env-filter", "fmt"] }
sanitize-filename-reader-friendly = "2.2.1"
derive_builder = "0.10.2"

[dependencies.effektio-core]
path = "../core"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
default-features = false
features = [
#    "encryption",
    "rustls-tls",
#    "qrcode",
#    "sled_cryptostore",
    "sled_state_store",
    "anyhow",
]

#   ----   WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.28"

#   ----  ANDROID
[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
android_logger = "0.10.1"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[lib]
name = "effektio"
crate-type = ["cdylib", "staticlib"]
