[package]
name = "effektio"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "SDK of the effektio app"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[features]
default = [ "with-mocks", "dart" ]
with-mocks = [ "effektio-core/with-mocks" ]
cbindgen = [ ]
dart = [ "with-mocks" ]

[build-dependencies]
ffi-gen = { git = "https://github.com/effektio/ffi-gen" }
cbindgen = "0.20.0"

[dependencies]
anyhow = "1.0.51"
assign = "1.1.1"
derive_builder = { version = "0.10.2" }
ffi-gen-macro = { git = "https://github.com/effektio/ffi-gen" }
futures = "0.3.17"
futures-signals = "0.3.28"
lazy_static = "1.4"
log = "0.4"
log-panics = "2.0.0"
mime = "0.3.16"
parking_lot = "0.11.2"
ruma = "0.6.1"
sanitize-filename-reader-friendly = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = "1"
tracing = { version = "0.1.29", default-features = false }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", default-features = false, features = ["env-filter", "fmt"] }
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.effektio-core]
path = "../core"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
default-features = false
features = [
    "anyhow",
    "e2e-encryption",
    "experimental-timeline",
#   "qrcode",
    "rustls-tls",
    "sled",
]

#   ----   WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.28"

#   ----  ANDROID
[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
android_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }

[lib]
name = "effektio"
crate-type = ["cdylib", "staticlib", "lib"]
