[package]
name = "effektio"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "SDK of the effektio app"
homepage = "https://effekto.org"
repository = "https://github.com/effektio/effektio"
license-file = "../../LICENSE.txt"

[features]
default = [ "with-mocks", "dart" ]
with-mocks = [ "effektio-core/with-mocks" ]
dart = [ "with-mocks" ]

[build-dependencies]
ffi-gen = { git = "https://github.com/effektio/ffi-gen" }

[dependencies]
anyhow = "1.0.51"
assign = "1.1.1"
derive_builder = { version = "0.10.2" }
ffi-gen-macro = { git = "https://github.com/effektio/ffi-gen" }
futures = "0.3.17"
futures-signals = "0.3.31"
lazy_static = "1.4"
log = "0.4"
log-panics = "2.0.0"
mime = "0.3.16"
parking_lot = "0.11.2"
ruma =  { workspace = true }
sanitize-filename-reader-friendly = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = "1"
tracing = { version = "0.1.29", default-features = false, features = ["log"] }
url = "2.2.2"

[dev-dependencies]
env_logger = "0.9.0"
tempfile = "3.3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.effektio-core]
path = "../core"

[dependencies.matrix-sdk]
workspace = true
features = [
    "anyhow",
    "e2e-encryption",
    "experimental-timeline",
    "markdown",
#   "qrcode",
    "rustls-tls",
    "sled",
]

[dependencies.js_int]
version = "0.2.2"
features = ["lax_deserialize"]

#   ----   WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.28"

#   ----  ANDROID
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
tracing-android = "0.2"

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
flexi_logger = "0.24.0"

[lib]
name = "effektio"
crate-type = ["cdylib", "staticlib", "lib"]
