[package]
name = "matrix-sdk-store-file-event-cache"
description = "A file-based implementation of the matrix-sdk event-cache-store"
version = "0.1.3+dev"
edition = "2021"
rust-version = "1.70"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>", "Acter Team <team@acter.global>"]
repository = "https://github.com/acterglobal/a3/tree/main/native/file-event-cache"
keywords = ["matrix-sdk", "cache", "store"]
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[features]
queued = ["dep:tokio"]
default = ["queued"]

[dependencies]
async-trait = "*"
base64ct = { version = "*", features = ["alloc"] }
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
matrix-sdk-store-encryption = { workspace = true }
rmp-serde = "1.1.2"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["sync"], default-features = false, optional = true }
tracing = "*"

[dev-dependencies]
anyhow = "*"
matrix-sdk-sqlite = { workspace = true, features = ['event-cache'] }
matrix-sdk-test = { workspace = true }
matrix-sdk = { workspace = true, features = ["rustls-tls"] }
tempfile = "*"
tokio = "*"
uuid = { version = "*", features = ["v4"] }