[package]
name = "matrix-sdk-store-media-cache-wrapper"
description = "Wrap any matrix-sdk State Store to store media files in a separate directory instead"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
base64ct = { version = "1.6.0", features = ["alloc"] }
rmp-serde = "1.1.2"
matrix-sdk-base = { workspace = true }
matrix-sdk-store-encryption = { workspace = true }
serde_json = "1"
tracing = "0.1.40"

[dev-dependencies]
matrix-sdk-sqlite = { workspace = true }
matrix-sdk-test = { workspace = true }
tokio = "1.35.1"
tempfile = "3.9.0"
anyhow = "1.0.79"
uuid = { version = "1.6.1", features = ["v4"] }