[package]
name = "matrix-sdk-store-media-cache-wrapper"
description = "Wrap any matrix-sdk State Store to store media files in a separate directory instead"
version = "0.1.3+dev"
edition = "2021"
rust-version = "1.70"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>", "Acter Team <team@acter.global>"]
repository = "https://github.com/acterglobal/a3/tree/main/native/media-cache-wrapper"
keywords = ["matrix-sdk", "cache", "store"]
readme = "Readme.md"
license = "MIT OR Apache-2.0"


[dependencies]
