[package]
name = "acter-test"
description = "internal integration tests for acter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.acter]
path = "../acter"
default-features = false
features = ["testing"]

[dependencies.acter-core]
path = "../core"

[dependencies]
anyhow = "*"
env_logger = { workspace = true }
futures = "*"
mail-parser = "0.9.3"
mailhog-rs = "0.2.0"
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
regex = "*"
serde_json = "*"
tempfile = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-retry = { workspace = true }
tracing = { version = "*", features = ["log"] }
url = "*"
uuid = "*"
