[package]
name = "acter-test"
description = "internal integration tests for acter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.acter]
path = "../acter"
default-features = false
features = ["testing"]

[dependencies.acter-core]
path = "../core"
features = ["testing"]

[dependencies]
matrix-sdk-base = { workspace = true }
matrix-sdk = { workspace = true }
chrono = "*"
anyhow = "1"
env_logger = { workspace = true }
futures = "0.3.30"
mail-parser = "0.10.2"
mailhog-rs = "0.2.0"
nanoid = "0.4.0"
regex = "1"
serde_json = "1"
tempfile = "3.9.0"
url = "2.5.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tracing = { version = "0.1.40", features = ["log"] }
uuid = "1.6.1"
urlencoding = { workspace = true }
