[package]
name = "acter-tui"
description = "The Acter Terminal User Interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
homepage = "https://effekto.org"
repository = "https://github.com/acterglobal/a3"
license-file = "../../LICENSE.txt"

[dependencies]
anyhow = "1"
app_dirs2 = "2.5.3"
async-broadcast = { workspace = true }
clap = { version = "4.1.8", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
crossterm = "0.25"
dialoguer = "0.9.0"
env_logger = "0.10.0"
futures = "0.3.21"
term-table = "1.3.2"
tokio = { version = "1", features = ["full", "time"] }
tracing = { version = "0.1.37", features = ["log"] }
tui = "0.19.0"
tui-logger = { git = "https://github.com/gin66/tui-logger" }

[dependencies.acter-core]
path = "../core"

[dependencies.acter]
path = "../acter"
default-features = false
